tube-archivist/archivist-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tubearchivist
  namespace: tube-archivist
  labels:
    io.kompose.service: tubearchivist
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tubearchivist
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: tubearchivist
    spec:
      volumes:
        - name: media
          hostPath:
            path: /local/tube-archivist/media
            type: ''
        - name: cache
          hostPath:
            path: /local/tube-archivist/cache
            type: ''
      containers:
        - name: tubearchivist
          image: bbilly1/tubearchivist:v0.4.10
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: media
              mountPath: /youtube
            - name: cache
              mountPath: /cache
          livenessProbe:
            exec:
              command:
                - curl
                - '-f'
                - http://localhost:8000/health
            initialDelaySeconds: 30
            timeoutSeconds: 10
            periodSeconds: 120
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: k-w-3
      securityContext: {}
      schedulerName: default-scheduler
      tolerations:
        - key: local-storage-available
          operator: Equal
          value: 'true'
          effect: NoSchedule
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
