tube-archivist/elasticsearch-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: archivist-es
  namespace: tube-archivist
  labels:
    io.kompose.service: archivist-es
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: archivist-es
  template:
    metadata:
      labels:
        io.kompose.service: archivist-es
    spec:
      volumes:
        - name: es
          persistentVolumeClaim:
            claimName: es-1
      containers:
        - name: archivist-es
          image: bbilly1/tubearchivist-es
          ports:
            - containerPort: 9200
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: es
              mountPath: /usr/share/elasticsearch/data
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
