tube-archivist/redis-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: archivist-redis
  namespace: tube-archivist
  labels:
    io.kompose.service: archivist-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: archivist-redis
  template:
    metadata:
      labels:
        io.kompose.service: archivist-redis
    spec:
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis-1
      containers:
        - name: archivist-redis
          image: redis/redis-stack-server
          ports:
            - containerPort: 6379
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: redis
              mountPath: /data
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
