tube-archivist/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tubearchivist
  namespace: tube-archivist
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: tubearchivist
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
