tube-archivist/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tube-archivist
  namespace: tube-archivist
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tube.mizar.scalar.cloud`)
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
      priority: 10
      services:
        - name: tubearchivist
          kind: Service
          namespace: tube-archivist
          port: http
  tls:
    secretName: tube-archivist-tls
